[package]
name = "lox-repl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4.2.3", features = ["derive"] }
reedline = "0.18"

lox = { path = "../lox-tree", package = "lox-tree" }